# Laberinto-OpenGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
assets/models/: GirlModel.glb
include/glad/: glad.h
shaders/: fragment_shader.glsl  shader_loader.h  sky_f.glsl  sky_v.glsl  vertex_shader.glsl
src/: glad.c
